tests/cases/errors/sema/undeclared_identifier.hc
//@ error: use of undeclared identifier
U0 Main()
{
  x = 1;
}
